Fix icons alignment issues

--- a/Common/preview_style.css
+++ b/Common/preview_style.css
@@ -190,11 +190,11 @@
 }
 
 #link-preview-restore {
-  margin-right: 10px;
+  margin-right: 12px;
 }
 
 #link-preview-enlarge {
-  margin-right: 5.5px;
+  margin-right: 5px;
 }
 
 .link-preview-controls button:hover {
